@@ -312,3 +312,8 @@ firecookie.edit.value.label=Value:
 firecookie.edit.secure.label=Secure Cookie
 firecookie.edit.httponly.label=HTTP Only
 firecookie.edit.session.label=Session
+
+# LOCALIZATION NOTE (firecookie.console.Cookies, firecookie.console.Filter_By_Cookies)
+# Label and tooltip for a toolbar button displayed on the Console panel. Used for filtering.
+firecookie.console.Cookies=Cookies
+firecookie.console.Filter_By_Cookies=Filter By Cookies
